--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@ nav a:hover {
         Ich komme aus Syrien.<br>
         Ich bin 31Jahre alt.Ich bin liedig.<br>
         Ich bin seit 4jahren in Deutschland geblieben.<br>
-        Ich habe in meine hiemat als Buchhalter gearbeitet.<br>
-        Ich habe in meine hiemat als Uhren verkaufer gearbeitet.<br>
+        Ich habe in meine Heimat als Buchhalter gearbeitet.<br>
+        Ich habe in meine Heimat als Uhren verkaufer gearbeitet.<br>
     </p>
     <hr />
 
