--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ nav a:hover {
     <p>
         Ich bin Yaman Katmawi.<br>
         Ich komme aus Syrien.<br>
-        Ich bin 31Jahre alt.Ich bin liedig.<br>
+        Ich bin 31Jahre alt.Ich bin ledig.<br>
         Ich bin seit 4jahren in Deutschland geblieben.<br>
         Ich habe in meine Heimat als Buchhalter gearbeitet.<br>
         Ich habe in meine Heimat als Uhren verkaufer gearbeitet.<br>
